src/objects/SpareProduct__c.object
<CustomObject>
    <fields>
        <fullName>ChineseDescription__c</fullName>
        <label>中文描述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnglishDescription__c</fullName>
        <label>英文描述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaterialCoding__c</fullName>
        <label>物料编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNo__c</fullName>
        <label>PartNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>产品线</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>歌德备件</fullName>
                    <default>true</default>
                    <label>歌德备件</label>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>海德堡备件</fullName>
                </value>
                <value>
                    <fullName>罗兰备件</fullName>
                </value>
                <value>
                    <fullName>OPTOS备件</fullName>
                </value>
                <value>
                    <fullName>KOWA备件</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StandardPrice__c</fullName>
        <label>标准价格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>备件产品</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ChineseDescription__c</columns>
        <columns>ProductLine__c</columns>
        <columns>StandardPrice__c</columns>
        <columns>PartNo__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <displayFormat>BJCP-{YYYY}{MM}-{00000}</displayFormat>
        <label>备件产品编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>备件产品</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>